flux/apps/booklore/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: booklore-db
  namespace: multimedia-factory
spec:
  selector:
    app: booklore-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: booklore
  namespace: multimedia-factory
spec:
  selector:
    app: booklore
  ports:
    - protocol: TCP
      port: 6060
      targetPort: 6060
  type: ClusterIP
